Mon Aug 30 15:07:23 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3632_Regression/Bug_3632_Regression.mpc:

          Added an "after" so that parallel builds work correctly and the
          generated makefiles achieve the author's presumed intent of running
          the *idl project first.

Mon Aug 30 14:55:33 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * TAO_IDL/tao_idl.mpc:

          Added postinstall commands to add symlinks to TAO_IDL_BE and
          TAO_IDL_FE to the installed share/ace directory, so that
          projects built on taobaseidldefaults.mpb (dependent_libs
          on TAO_IDL_FE/BE) can build from a TAO install.(Bugzilla #3281)

Mon Aug 30 10:00:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/AbstractBase.h:
        * tao/Valuetype/AbstractBase.inl:
        * tao/Valuetype/AbstractBase_T.h:
        * tao/Valuetype/AbstractBase_T.cpp:
        * tao/Valuetype/ValueFactory.h:
        * tao/Valuetype/Valuetype_Adapter_Impl.h:
        * tao/Valuetype/Valuetype_Adapter_Impl.cpp:
          Layout and const changes

Mon Aug 30 07:44:17 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Connection_Handler.cpp:
          Readded some code that I zapped by accidennt, this fixes the crashing
          of the Faults test

Fri Aug 27 19:09:02 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * MPC/config/taobaseidldefaults.mpb:

          Merged dependent_libs change from TAO 1.5a to cause idl files
          to be rebuilt when tao_idl's dynamically linked libraries are
          rebuilt.(Bugzilla #3281)

Fri Aug 27 18:06:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Connection_Handler.h:
        * tao/Connection_Handler.cpp:
          Thinking more about this, we don't need a mutex here

Fri Aug 27 14:57:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Trader/Locking.h:
          Removed this file.
