@@ -379,8 +379,13 @@ DRV_sweep_dirs (const char *rel_path,
             {
               if (!include_added)
                 {
-                  ACE_CString incl_arg ("-I");
+                  /// Surround the path name with quotes, in
+                  /// case the original path argument included
+                  /// spaces. If it didn't, no harm done.
+                  ACE_CString incl_arg ("-I ");
+                  incl_arg += '\"';
                   incl_arg += bname;
+                  incl_arg += '\"';
                   DRV_cpp_putarg (incl_arg.c_str ());
                   idl_global->add_rel_include_path (bname.c_str ());
                   full_path = ACE_OS::realpath ("", abspath);
